--- a/main.ipynb
+++ b/main.ipynb
@@ -1457,18 +1457,30 @@
       "11 / 26  source: www.jrlinton.co.uk\n",
       "12 / 26  source: www.kingsfieldcomputers.co.uk\n",
       "13 / 26  source: www.makingbuyingeasy.co.uk\n",
-      "14 / 26  source: www.mediashopuk.com\n"
+      "14 / 26  source: www.mediashopuk.com\n",
+      "15 / 26  source: www.mrhightech.com\n",
+      "16 / 26  source: www.nexus-t.co.uk\n",
+      "17 / 26  source: www.odsi.co.uk\n",
+      "18 / 26  source: www.officedepot.com\n",
+      "19 / 26  source: www.ohc24.ch\n",
+      "20 / 26  source: www.pc-canada.com\n",
+      "21 / 26  source: www.pcconnection.com\n",
+      "22 / 26  source: www.planet-computer.it\n",
+      "23 / 26  source: www.shopmania.com\n",
+      "24 / 26  source: www.softwarecity.ca\n",
+      "25 / 26  source: www.vology.com\n",
+      "26 / 26  source: www.xpcpro.com\n"
      ]
     }
    ],
    "source": [
     "# Instantiate matcher and run\n",
-    "matcher = Cupid(w_struct=0.4, leaf_w_struct=0.4, th_accept=0.9, parallelism=16)\n",
     "\n",
     "output = pd.DataFrame(columns=['source_attribute_id', 'target_attribute_name'])\n",
     "i = 1\n",
     "\n",
     "for source in sources2dataframe:\n",
+    "    matcher = Cupid(w_struct=0.4, leaf_w_struct=0.4, th_accept=0.9, parallelism=16)\n",
     "    print(i,\"/\",len(sources2dataframe), \" source:\", source)\n",
     "    df = sources2dataframe.get(source)\n",
     "    matches = valentine_match(df, mediated_schema, matcher)\n",
@@ -1476,15 +1488,8 @@
     "        output.loc[len(output)] = [source+'//'+a1, a2]\n",
     "    i += 1\n",
     "    \n",
-    "    pd.DataFrame.to_csv(output, 'cupid_output_predictions.csv', index=False)"
+    "pd.DataFrame.to_csv(output, 'cupid_output_predictions.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
